--- a/views/pages/aditiGurkar.ejs
+++ b/views/pages/aditiGurkar.ejs
@@ -2,7 +2,7 @@
 <% include ../partials/header %>  
 <div
 class='bg-img'
-style='background-image:url("img/bg/bg1.jpg")'>
+style='background-image:url("img/bg/aditi.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Aditi Gurkar
