--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,7 +36,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div
 class='bg-img'
 id='about'
-style='background-image:url("img/bg/bg2.jpg")'>
+style='background-image:url("img/bg/aditi.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       About Aditi Gurkar
@@ -61,7 +61,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
 <div
 class='bg-img'
 id='research'
-style='background-image:url("img/bg/bg3.jpg")'>
+style='background-image:url("img/bg/bg2.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Research Interests
@@ -89,7 +89,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
 <div
 class='bg-img'
 id='publications'
-style='background-image:url("img/bg/bg4.jpg")'>
+style='background-image:url("img/bg/bg3.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Publications
@@ -121,7 +121,7 @@ style='background-image:url("img/bg/bg4.jpg")'>
 <div
 class='bg-img'
 id='team'
-style='background-image:url("img/bg/bg1.jpg")'>
+style='background-image:url("img/bg/bg4.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       The Team
@@ -151,7 +151,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div
 class='bg-img'
 id='news'
-style='background-image:url("img/bg/bg2.jpg")'>
+style='background-image:url("img/bg/bg5.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Lab News
