--- a/public/css/app.css
+++ b/public/css/app.css
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h5 {
 
 /* Colab styles */
 .badge .my-badge {
-  min-width: 6.1em;
+  font-size: 1.3rem;
 }
 
 /* Testimonials styles */
