--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -235,8 +235,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
 <div class='grid-x grid-container medium-offset-3 grid-padding-y grid-padding-x add-padd' >
   <div class='medium-6 cell'>
     <div class='grid-x grid-padding-x'>
-      <div class='cell shrink'>
-        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
+      <div class='cell shrink border-right'>
+        <span class="badge my-badge"><i class="fi-torso"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Patricia Opresko, Ph.D | 
@@ -244,8 +244,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
-      <div class='cell shrink'>
-        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
+      <div class='cell shrink border-right'>
+        <span class="badge my-badge"><i class="fi-torso"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Charleen Chu, Ph.D. | 
@@ -253,8 +253,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
-      <div class='cell shrink'>
-        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
+      <div class='cell shrink border-right'>
+        <span class="badge my-badge"><i class="fi-torso"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Steven Chan,MD, PhD, FAHA | 
@@ -262,8 +262,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
-      <div class='cell shrink'>
-        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
+      <div class='cell shrink border-right'>
+        <span class="badge my-badge"><i class="fi-torso"></i></span>
       </div>
       <div class='cell auto'>
         <h6>Tzahi Cohen-Karni | 
@@ -271,8 +271,8 @@ style='background-image:url("img/bg/bg3.jpg")'>
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
-      <div class='cell shrink'>
-        <span class="badge my-badge"><i class="fi-torso size-36"></i></span>
+      <div class='cell shrink border-right'>
+        <span class="badge my-badge"><i class="fi-torso"></i></span>
       </div>
       <div class='cell auto'>
         <h6>TMichael Jurckzak | 
