--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -236,47 +236,47 @@ style='background-image:url("img/bg/bg3.jpg")'>
   <div class='medium-6 cell'>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
-        <span class="badge my-badge"><i class="fi-torso"></i></span>
+        <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h6>Patricia Opresko, Ph.D | 
-          <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a></h6> 
+        <h5>Patricia Opresko, Ph.D | 
+          <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a></h5> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
-        <span class="badge my-badge"><i class="fi-torso"></i></span>
+        <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h6>Charleen Chu, Ph.D. | 
-          <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a></h6> 
+        <h5>Charleen Chu, Ph.D. | 
+          <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a></h5> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
-        <span class="badge my-badge"><i class="fi-torso"></i></span>
+        <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h6>Steven Chan,MD, PhD, FAHA | 
-          <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a></h6> 
+        <h5>Steven Chan,MD, PhD, FAHA | 
+          <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a></h5> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
-        <span class="badge my-badge"><i class="fi-torso"></i></span>
+        <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h6>Tzahi Cohen-Karni | 
-          <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a></h6> 
+        <h5>Tzahi Cohen-Karni | 
+          <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a></h5> 
       </div>
     </div>
     <div class='grid-x grid-padding-x'>
       <div class='cell shrink border-right'>
-        <span class="badge my-badge"><i class="fi-torso"></i></span>
+        <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h6>TMichael Jurckzak | 
-          <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a></h6> 
+        <h5>TMichael Jurckzak | 
+          <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a></h5> 
       </div>
     </div>
   </div>
