--- a/public/css/app.css
+++ b/public/css/app.css
@@ -167,13 +167,13 @@ h1, h2, h3, h4, h5, h5 {
 }
 
 /* Colab styles */
-.badge .my-badge {
+.my-badge {
   font-size: 1.3rem;
 }
 
 /* Testimonials styles */
 .my-orbit {
-  background-image: url("../img/bg/bg2.jpg");
+  background-image: url("../img/bg/bg4.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
