--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@ class='bg-img'
 style='background-image:url("img/bg/bg1.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
-      UNCOVERING CELLULAR RESPONSES TO GENOTOXIC STRESS
+      Decoding the cellular responses to DNA damage that drive aging
     </h1>
   </div>
 </div>
