--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -146,6 +146,7 @@ style='background-image:url("img/bg/bg2.jpg")'>
     </div>
   </div>
 </div>
+
 <div class="reveal" id="my-img-modal" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
   <div class='big-grid-img'>
     <img class='grid-x' id='img-show'/>
@@ -159,72 +160,84 @@ style='background-image:url("img/bg/bg2.jpg")'>
   </button>
 </div>
 
-<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-  <div class="orbit-wrapper">
-    <div class="orbit-controls">
-      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-    </div>
-    <ul class="orbit-container my-orbit">
-      <%
-        if (results && results.testimonials) {
-        for (let i = 0; i < results.testimonials.length; i++) { 
-      %>
-      <li class="is-active orbit-slide">
-        <div class="full-width-testimonial">
-          <div class="full-width-testimonial-section">
-            <div class="full-width-testimonial-icon text-center">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
-                  <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
-                    h8.1v12.8h-14.4V260.4z"/>
-                  <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
-                    v12.8H-212V260.4z"/>
-              </svg>
-            </div>
-            <div class="full-width-testimonial-content">
-              <h5 class="full-width-testimonial-text">
-                <%=results.testimonials[i].description %>
-              </h5>
-              <div class='testimonial-profile'>
-                <div class='grid-x'>
-                  <div class='medium-6 cell medium-offset-3'>
-                    <div class='grid-x grid-padding-x'>
-                      <div class='cell shrink border-right'>
-                        <img class='testimonial-img' src='<%=results.testimonials[i].image %>'>
-                      </div>
-                      <div class='cell auto'>
-                        <p class="full-width-testimonial-source"><%=results.testimonials[i].name %></p>
-                        <span class="full-width-testimonial-source-context"><%=results.testimonials[i].title %></span>
+<div
+class='bg-img'
+style='background-image:url("img/bg/bg3.jpg")'>
+  <div class='bg-center-container'>
+    <h1 class='bg-heading'>
+      Testimonials
+    </h1>
+  </div>
+</div>
+<div class='grid-x grid-container grid-padding-y grid-padding-x add-padd'>
+  <div class="cell">
+    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+      <div class="orbit-wrapper">
+        <div class="orbit-controls">
+          <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+          <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+        </div>
+        <ul class="orbit-container">
+          <%
+            if (results && results.testimonials) {
+            for (let i = 0; i < results.testimonials.length; i++) { 
+          %>
+          <li class="is-active orbit-slide">
+            <div class="full-width-testimonial">
+              <div class="full-width-testimonial-section">
+                <div class="full-width-testimonial-icon text-center">
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
+                      <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
+                        h8.1v12.8h-14.4V260.4z"/>
+                      <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
+                        v12.8H-212V260.4z"/>
+                  </svg>
+                </div>
+                <div class="full-width-testimonial-content">
+                  <h5 class="full-width-testimonial-text">
+                    <%=results.testimonials[i].description %>
+                  </h5>
+                  <div class='testimonial-profile'>
+                    <div class='grid-x'>
+                      <div class='medium-6 cell medium-offset-3'>
+                        <div class='grid-x grid-padding-x'>
+                          <div class='cell shrink border-right'>
+                            <img class='testimonial-img' src='<%=results.testimonials[i].image %>'>
+                          </div>
+                          <div class='cell auto'>
+                            <p class="full-width-testimonial-source"><%=results.testimonials[i].name %></p>
+                            <span class="full-width-testimonial-source-context"><%=results.testimonials[i].title %></span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </li>
-      <%}}%>
-    </ul>
+          </li>
+          <%}}%>
+        </ul>
+      </div>
+      <nav class="orbit-bullets">
+        <button class="is-active" data-slide="0">
+          <span class="show-for-sr">First slide details.</span>
+          <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+        </button>
+        <%
+          if (results && results.testimonials) {
+          for (let i = 1; i < results.testimonials.length; i++) { 
+        %>
+          <button data-slide="<%=i %>"><span class="show-for-sr"></span></button>
+        <%}}%>
+      </nav>
+    </div>
   </div>
-  <nav class="orbit-bullets">
-    <button class="is-active" data-slide="0">
-      <span class="show-for-sr">First slide details.</span>
-      <span class="show-for-sr" data-slide-active-label>Current Slide</span>
-    </button>
-    <%
-      if (results && results.testimonials) {
-      for (let i = 1; i < results.testimonials.length; i++) { 
-    %>
-      <button data-slide="<%=i %>"><span class="show-for-sr"></span></button>
-    <%}}%>
-  </nav>
 </div>
-
 <div
 class='bg-img'
-style='background-image:url("img/bg/bg3.jpg")'>
+style='background-image:url("img/bg/bg4.jpg")'>
   <div class='bg-center-container'>
     <h1 class='bg-heading'>
       Collaborations
@@ -275,7 +288,7 @@ style='background-image:url("img/bg/bg3.jpg")'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
       <div class='cell auto'>
-        <h5>TMichael Jurckzak | 
+        <h5>Michael Jurckzak | 
           <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a></h5> 
       </div>
     </div>
