--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,11 +2,17 @@
     <div class="grid-x grid-padding-x" data-equalizer>
       <div class="shrink cell out-vc" data-equalizer-watch>
         <div class="in-vc">
-          <a href="<% if(dirName) { %><%=dirName%><%}%>"><img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" id='header-logo' class='top-bar-logo'></a>
+          <a >
+            <i class="fi-list medium"></i>
+          </a>
+          <a href="<% if(dirName) { %><%=dirName%><%}%>">
+            <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" id='header-logo' class='top-bar-logo show-for-large'>
+            <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/small_logo.png" id='header-logo' class='top-bar-logo hide-for-large'>
+          </a>
         </div>
       </div>
       <div class="auto cell out-vc top-bar-center" data-equalizer-watch>
-        <div class="in-vc">
+        <div class="in-vc hide-for-small">
           <ul class="menu">
             <% for(let i = 0; i < pages.length; i++) { %>
             <li><a class='top-bar-link' href="<% if(dirName) { %><%=dirName%><%}%><%= pages[i].link %>"><%= pages[i].title %></a></li>
@@ -23,3 +29,4 @@
       </div>
     </div>
   </header>
+  <% include ../partials/mobileHeader %>  
