--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="auto cell out-vc top-bar-center" data-equalizer-watch>
-        <div class="in-vc hide-for-small">
+        <div class="in-vc show-for-medium">
           <ul class="menu">
             <% for(let i = 0; i < pages.length; i++) { %>
             <li><a class='top-bar-link' href="<% if(dirName) { %><%=dirName%><%}%><%= pages[i].link %>"><%= pages[i].title %></a></li>
