--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
           </ul>
         </div>
       </div>
-      <div class="medium-2 cell out-vc"  data-equalizer-watch>
+      <div class="small-2 cell out-vc"  data-equalizer-watch>
         <div class='in-vc'>
           <a target="blank" href="https://twitter.com/healthspan_AUG"><i class="social_header fi-social-twitter size-36"></i></a>
           <a target="blank" href="https://www.linkedin.com/in/aditigurkar/"><i class="social_header fi-social-linkedin size-36"></i></a>
