--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,9 @@
           <a href="<% if(dirName) { %><%=dirName%><%}%>" class='show-for-large'>
             <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" id='header-logo' class='top-bar-logo'>
           </a>
+          <a href="<% if(dirName) { %><%=dirName%><%}%>" class='show-for-small-only'>
+            <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/small_logo.png" id='header-logo' class='top-bar-logo'>
+          </a>
         </div>
       </div>
       <div class="auto cell out-vc top-bar-center" data-equalizer-watch>
