--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,7 @@
     <div class="grid-x grid-padding-x" data-equalizer>
       <div class="shrink cell out-vc" data-equalizer-watch>
         <div class="in-vc">
-          <a >
-            <i class="fi-list medium"></i>
-          </a>
+          <i class="fi-list medium" id='mobile-menu'></i>
           <a href="<% if(dirName) { %><%=dirName%><%}%>" class='show-for-large'>
             <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" id='header-logo' class='top-bar-logo'>
           </a>
