--- a/views/partials/mobileHeader.ejs
+++ b/views/partials/mobileHeader.ejs
@@ -1,4 +1,4 @@
-<div class='mobile-menu'>
+<div id='mobile-menu' class='mobile-menu hide'>
   <div class='grid-x'>
     <div class='cell center'>
       <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" class='top-bar-logo '>
