--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,7 +72,8 @@ h1, h2, h3, h4, h5, h5 {
 }
 
 .mobile-menu {
-  background-color: #f1f1f1;
+  background-color: #ffffff;
+  z-index: 9999;
 }
 
 .mobile-menu > .hide {
