--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="grid-x grid-padding-x" data-equalizer>
       <div class="shrink cell out-vc" data-equalizer-watch>
         <div class="in-vc">
-          <i class="fi-list large" id='mobile-menu-icon'></i>
+          <i class="fi-list large show-for-small-only" id='mobile-menu-icon'></i>
           <a href="<% if(dirName) { %><%=dirName%><%}%>" class='show-for-large'>
             <img src="<% if(dirName) { %><%=dirName%><%}%>/img/logos/logo.png" id='header-logo' class='top-bar-logo'>
           </a>
