--- a/public/css/app.css
+++ b/public/css/app.css
@@ -59,8 +59,9 @@ h1, h2, h3, h4, h5, h5 {
 
 .top-bar-link {
   color: #439aa5;
-  padding: 0.2rem 0.5em !important;
+  padding: 0.1rem 0.3em !important;
   font-family: "Amiri",serif;
+  font-size: 18px;
 }
 
 .header-logo {
