--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,11 +5,11 @@ Blue: #32485c;
 
 /* Text Styles */
 p {
-  font-family: "ff-meta-serif-web-pro";
+  font-family: "Amiri",serif;
   font-size: 18px;
 }
 h1, h2, h3, h4, h5, h5 {
-  font-family: "brandon-grotesque";
+  font-family: "Amiri",serif;
 }
 
 .news-text {
@@ -115,6 +115,7 @@ h1, h2, h3, h4, h5, h5 {
   justify-items: 'center';
 }
 .bg-center-container {
+  max-width: 650px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.4);
   border: 2px solid #fff;
