--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h5 {
   font-family: "Amiri",serif;
 }
 
+body {
+  font-family: "Amiri",serif;
+}
+
 .news-text {
   overflow: hidden;
   display: -webkit-box;
