--- a/public/css/app.css
+++ b/public/css/app.css
@@ -109,7 +109,7 @@ body {
 
 /* banners */
 .bg-img {
-  padding: 35vh 0 0 0;
+  padding: 20vh 0;
 	width: 100%;
 	background-attachment: fixed;
 	background-position: center;
