--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
-      <h3>Welcome to Gurkar Lab!</h3>
+      <h3 class='center'>Welcome to Gurkar Lab!</h3>
       <hr class="center-ball">
       <p class='web-pro-text'>
         The Gurkar lab is interested in defining the molecular mechanisms that drive aging in response to endogenous DNA damage, which accumulates in all of us over time. The majority of individuals over the age of 65 years suffer from at least two chronic degenerative diseases- neurodegeneration, cardiovascular disease, diabetes, cancer etc. These chronic diseases of the elderly consume an increasingly large fraction of our health care costs and rob individuals of their independence and quality of life.
