--- a/public/css/app.css
+++ b/public/css/app.css
@@ -535,6 +535,7 @@ hr {
   margin-top:10px;
   margin-bottom:10px;
   margin-left: 0;
+  max-width: 300px;
 }
 hr.center-ball {
   background: #439aa5;
