--- a/public/css/app.css
+++ b/public/css/app.css
@@ -557,7 +557,7 @@ hr.center-ball:before {
 }
 .web-pro-text {
   font-family: "hk_groteskmedium",sans-serif;
-  font-size: 1.31944vw;
+  font-size: 18px;
 }
 .border-right {
   border-right: 1px solid #e6e6e6;
