--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -53,7 +53,7 @@ style='background-image:url("img/bg/aditi.jpg")'>
       <p class='web-pro-text'>
         Aditi U. Gurkar is an Assistant Professor in the Aging Institute, Division of Geriatric Medicine at the University of Pittsburgh. She recieved her Ph.D. at BU Medical school and her postodoctoral fellowship at MGH/Harvard Medical School and The Scripps Research Institute. She has long been interested in DNA damage induced rewiring of metabolic circuitry that drives age-related pathologies and how one can therapeutically target it to delay aging.
       </p>
-      <a class="hollow button" href="./Aditi-Gurkar">Learn More About Aditi Gurkar <i class="fi-arrow-right"></i></a>
+      <a class="hollow button" href="./Aditi-Gurkar">Learn More About Aditi Gurkar <i class="fi-arrow-right my-arrow"></i></a>
     </div>
   </div>
 </div>
