--- a/public/css/app.css
+++ b/public/css/app.css
@@ -577,6 +577,13 @@ hr.center-ball:before {
 
 
 /* Button styles */
+.hollow {
+  -webkit-transition: all .50s ease-in-out;
+  -moz-transition: all .50s ease-in-out;
+  -o-transition: all .50s ease-in-out;
+  transition: all .50s ease-in-out;
+}
+
 .hollow > .my-arrow {
   display: none;
 }
