--- a/public/css/app.css
+++ b/public/css/app.css
@@ -590,11 +590,11 @@ hr.center-ball:before {
 }
 .the-arrow.-left > .shaft {
   width: 0;
-  background-color: #999;
+  background-color: #439aa5;
 }
 .the-arrow.-left > .shaft:before, .the-arrow.-left > .shaft:after {
   width: 0;
-  background-color: #999;
+  background-color: #439aa5;
 }
 .the-arrow.-left > .shaft:before {
   -webkit-transform: rotate(0);
@@ -628,7 +628,7 @@ hr.center-ball:before {
           transform: rotate(-40deg);
 }
 .the-arrow > .shaft {
-  background-color: #999;
+  background-color: #439aa5;
   display: block;
   height: 1px;
   position: relative;
@@ -639,7 +639,7 @@ hr.center-ball:before {
   will-change: transform;
 }
 .the-arrow > .shaft:before, .the-arrow > .shaft:after {
-  background-color: #999;
+  background-color: #439aa5;
   content: '';
   display: block;
   height: 1px;
@@ -662,7 +662,7 @@ hr.center-ball:before {
 
 .animated-arrow {
   display: inline-block;
-  color: #999;
+  color: #439aa5;
   font-size: 1.25em;
   font-style: italic;
   text-decoration: none;
