--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,31 +42,27 @@ style='background-image:url("img/bg/aditi.jpg")'>
     </h1>
   </div>
 </div>
-<div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
-  <div class='shrink large-offset-1 cell out-vc'  data-equalizer-watch>
-    <div class='in-vc'>
-      <img src='img/profile-pic/aditi.jpg'>
-    </div>
+<div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'>
+  <div class='shrink large-offset-1 cell out-vc'>
+    <img src='img/profile-pic/aditi.jpg'>
   </div>
-  <div class='medium-7 large-7 cell out-vc'  data-equalizer-watch>
-    <div class='in-vc'>
-      <p class='web-pro-text'>
-        Aditi U. Gurkar is an Assistant Professor in the Aging Institute, Division of Geriatric Medicine at the University of Pittsburgh. She recieved her Ph.D. at BU Medical school and her postodoctoral fellowship at MGH/Harvard Medical School and The Scripps Research Institute. She has long been interested in DNA damage induced rewiring of metabolic circuitry that drives age-related pathologies and how one can therapeutically target it to delay aging.
-      </p>
-      <a class='animated-arrow' href='https://google.com'>
-        <span class='the-arrow -left'>
+  <div class='medium-7 large-7 cell out-vc'>
+    <p class='web-pro-text'>
+      Aditi U. Gurkar is an Assistant Professor in the Aging Institute, Division of Geriatric Medicine at the University of Pittsburgh. She recieved her Ph.D. at BU Medical school and her postodoctoral fellowship at MGH/Harvard Medical School and The Scripps Research Institute. She has long been interested in DNA damage induced rewiring of metabolic circuitry that drives age-related pathologies and how one can therapeutically target it to delay aging.
+    </p>
+    <a class='animated-arrow' href='https://google.com'>
+      <span class='the-arrow -left'>
+        <span class='shaft'></span>
+      </span>
+      <span class='main'>
+        <span class='text'>
+          Learn More
+        </span>
+        <span class='the-arrow -right'>
           <span class='shaft'></span>
         </span>
-        <span class='main'>
-          <span class='text'>
-            Learn More
-          </span>
-          <span class='the-arrow -right'>
-            <span class='shaft'></span>
-          </span>
-        </span>
-      </a>
-    </div>
+      </span>
+    </a>
   </div>
 </div>
 <div
